--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -53,6 +53,7 @@
 @import 'patterns/masthead';
 @import 'patterns/nav';
 @import 'patterns/owl-carousel';
+@import 'patterns/owl-carousel2';
 @import 'patterns/quotes';
 @import 'patterns/pills';
 @import 'patterns/photograph';
